--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -406,6 +406,8 @@
     <string name="all">All</string>
     <string name="credit">Credit</string>
     <string name="debit">Debit</string>
+    <string name="cr">Cr</string>
+    <string name="db">Db</string>
 
 
 </resources>
