--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="register_now">Register Now</string>
     <string name="or">Or</string>
     <string name="submit">Submit</string>
+    <string name="success">Success</string>
+    <string name="failure">Failure</string>
     <string name="cancel">Cancel</string>
     <string name="forgot_password">Forgot Password</string>
     <string name="change_password">Change Password</string>
