--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,14 +171,14 @@
     <string name="business_loan">Business Loan</string>
     <string name="current_loan">Current Loan</string>
     <string name="you_do_not_have_business_loan">You don\'t have any business loan.</string>
-    <string name="you_do_not_have_current_loan">You don\'t have any current loan.</string>
+    <string name="you_do_not_have_current_loan">You don\'t have any personal loan.</string>
     <string name="cash_out_lpk">Cash Out LPK</string>
     <string name="lets_do">Let\'s Do</string>
     <string name="history">History</string>
 
 
     <!--Loan Plans-->
-    <string name="current_loan_plans">Current Loan Plans</string>
+    <string name="personal_loan_plans">Personal Loan Plans</string>
     <string name="business_loan_plans">Business Loan Plans</string>
     <string name="weeks">Weeks </string>
     <string name="days">Days </string>
