--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -336,7 +336,8 @@
     <string name="exit_point">Exit Point</string>
     <string name="required_investment_amount">Enter an amount to invest.</string>
     <string name="select_investment_plan">Select one investment plan</string>
-    <string name="apply_an_investment_note">Your Investment with L-Pesa account has a generous annual interest rate starting from 8% up to 18% annually. You can invest and withdraw your interest funds with fixed \"monthly exit points\" on the investing amount. The longer you invest with L-Pesa, the better the benefits that you will experience. </string>
+    <string name="apply_an_investment_note_start">Your Investment with L-Pesa account has a generous annual interest rate starting from </string>
+    <string name="apply_an_investment_note_end">annually. You can invest and withdraw your interest funds with fixed \"monthly exit points\" on the investing amount. The longer you invest with L-Pesa, the better the benefits that you will experience. </string>
     <string name="automatically_add_interest_amount">Automatically add interest amount into L-Pesa wallet every month and enjoy steady  income status</string>
     <string name="investment_plan">Investment Plan</string>
     <string name="investment_history">Investment History</string>
