--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -321,6 +321,8 @@
     <string name="view_file">View File</string>
     <string name="delete">Delete</string>
     <string name="uploaded_on">Uploaded On:</string>
+    <string name="delete_this_item">Are you sure to delete this item?</string>
+
     <string name="enter_id_no">If you choose any id then just enter that id no. in the above text box!</string>
     <string name="upload_scanned_id">Please upload a scanned clear color of your ID.You can scan your Physical ID using a scanner or take a photo with your phone and upload it.</string>
 
