--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,7 @@
     <string name="required_otp">Please enter the OTP.</string>
     <string name="otp_not_match">You entered an incorrect OTP.</string>
     <string name="search_country">Search country</string>
+    <string name="search_result_not_found">Search result not found</string>
 
 
     <!--Navigation-->
