--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -383,7 +383,7 @@
     <string name="search">Search</string>
     <string name="savings">Savings</string>
     <string name="withdrawal">Withdrawal</string>
-    <string name="withdraw_on">Withdraw on</string>
+    <string name="withdraw_on">Withdrawal on</string>
     <string name="token_transfer_text">This is how it is all coming together.
         Once you have L-Pesa Kripton, also known as LPK,then you
         are able to keep it stored within your LPK savings wallet.
