--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,7 +173,7 @@
     <string name="personal_loan">Personal Loan</string>
     <string name="you_do_not_have_business_loan">You don\'t have any business loan.</string>
     <string name="you_do_not_have_current_loan">You don\'t have any personal loan.</string>
-    <string name="cash_out_lpk">Cash Out LPK</string>
+    <string name="save_your_lpk">Save your LPK</string>
     <string name="lets_do">Let\'s Do</string>
     <string name="history">History</string>
 
