--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -372,7 +372,7 @@
     <string name="erc_20_address">ERC 20 Address</string>
     <string name="narration">Narration</string>
     <string name="interest_amount">Interest Amount</string>
-    <string name="earned_interest">Earned interest</string>
+    <string name="earned_interest">Earned Interest</string>
     <string name="lpk_savings">LPK Savings</string>
     <string name="lpk_withdrawal">LPK Withdrawal</string>
     <string name="lpk">LPK</string>
