--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="or">Or</string>
     <string name="submit">Submit</string>
     <string name="success">Success</string>
+    <string name="successful">Successful</string>
     <string name="failure">Failure</string>
     <string name="cancel">Cancel</string>
     <string name="forgot_password">Forgot Password</string>
