--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,7 +105,9 @@
     <string name="required_otp">Please enter the OTP.</string>
     <string name="otp_not_match">You entered an incorrect OTP.</string>
     <string name="search_country">Search country</string>
+
     <string name="search_result_not_found">Search result not found</string>
+    <string name="no_result_found">We\'re sorry. We can\'t seem to find any result that match your search.</string>
 
 
     <!--Navigation-->
@@ -428,7 +430,6 @@
     <string name="debit">Debit</string>
     <string name="cr">Cr</string>
     <string name="dr">Dr</string>
-    <string name="title_activity_loan_apply2">LoanApplyActivity2</string>
 
 
 </resources>
