--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@
     <string name="server_issue">The server didn\'t respond, please try after sometime!</string>
     <string name="password_change_success">Your password was changed.</string>
     <string name="email_to_reset_password">Check your email to reset your password.</string>
+    <string name="sms_to_reset_password">Check your sms to reset your password.</string>
     <string name="change_one_info">Nothing to save! You have not yet edited.</string>
     <string name="no_internet">No Internet Connection</string>
     <string name="you_have_select_from_date_to_date">You should select From Date or To Date</string>
