--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -387,6 +387,7 @@
 
     <!--Notification-->
     <string name="notification">Notification</string>
+    <string name="new_">New</string>
 
 
 </resources>
