--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -382,6 +382,7 @@
     <string name="required_withdrawal_amount">Please enter the amount to withdraw.</string>
     <string name="transaction_history">Transaction History</string>
     <string name="commission">Commission</string>
+    <string name="want_to_withdraw">Do you want to withdraw?</string>
 
     <string name="cr">Cr</string>
     <string name="dr">Dr</string>
