--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,6 +97,7 @@
     <string name="required_otp">Please enter the OTP.</string>
     <string name="otp_not_match">You entered an incorrect OTP.</string>
     <string name="search_country">Search country</string>
+    <string name="required_cancellation_reason">Required cancellation reason</string>
 
     <string name="search_result_not_found">Search result not found</string>
     <string name="no_result_found">We\'re sorry. We can\'t seem to find any result that match your search.</string>
