--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -396,6 +396,7 @@
     <string name="notification">Notification</string>
     <string name="new_">New</string>
     <string name="empty_notification">We could not find a push notification with that ID linked to your account.</string>
+    <string name="title_activity_pin_set">PinSetActivity</string>
 
 
 </resources>
