--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="coming_soon">Coming soon</string>
 
     <!--Registration Message-->
+    <string name="session_time_out">Session time out</string>
     <string name="see_you_quality">See if you qualify</string>
     <string name="thank_you">Thank you!</string>
     <string name="dont_have_account">Don\'t have an account?</string>
