--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,6 +138,8 @@
     <string name="credit_score">Credit Score: </string>
     <string name="change_pin">Change Pin</string>
     <string name="your_security_pin">Your Security PIN</string>
+    <string name="your_otp_code">Your OTP code</string>
+    <string name="resend_otp">Resend OTP</string>
 
     <!--Profile Section-->
     <string name="profile_information">Profile Information</string>
